初始化数据

--- a/src/01_UserInterFace/SAAS.Api/appsettings.json
+++ b/src/01_UserInterFace/SAAS.Api/appsettings.json
@@ -15,8 +15,8 @@
     /*Redis地址 ,password=123456*/
     "Redis": "127.0.0.1:6379,syncTimeout=3000,abortConnect=false",
     /*数据库地址SC-201610011543\\MYDB   120.79.73.78*/
-    "Order_Db": "Data Source=localhost;Port=3306;Database=db_lj_order;SslMode=none;User Id=root;Password=Jianglei105;CharSet=utf8;",
-    "Sys_Db": "Data Source=.;Initial Catalog=Sys_Base_Db;User ID=sa;Password=123;MultipleActiveResultSets=True;"
+    "Order_Db": "Data Source=localhost;Port=3306;Database=db_lj_order;SslMode=none;User Id=root;Password=123456abcD;CharSet=utf8;",
+    "Sys_Db": "Data Source=DESKTOP-4UNR39U\\SQLEXPRESS;Initial Catalog=Sys_Base_Db;User ID=sa;Password=123456abcD;MultipleActiveResultSets=True;"
   },
   /* 认证配置项*/
   "Jwt": {
