--- a/src/01_UserInterFace/SAAS.IdentityS4/appsettings.json
+++ b/src/01_UserInterFace/SAAS.IdentityS4/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "ConnectionStrings": { "conn": "server=.;database=LoginDB;uid=sa;pwd=123" },
+  "ConnectionStrings": { "conn": "server=DESKTOP-4UNR39U\\SQLEXPRESS;database=LoginDB;uid=sa;pwd=123456abcD" },
   "Certificates": {
     "CerPath": "certificate\\cas.clientservice.pfx",
     "Password": "manulife"
