--- a/src/01_UserInterFace/SAAS.Api/appsettings.Development.json
+++ b/src/01_UserInterFace/SAAS.Api/appsettings.Development.json
@@ -16,7 +16,7 @@
     "Redis": "127.0.0.1:6379,syncTimeout=3000,abortConnect=false",
     /*数据库地址*/
     "Order_Db": "Data Source=localhost;Port=3306;Database=db_lj_order;SslMode=none;User Id=root;Password=Jianglei105;CharSet=utf8;",
-    "Sys_Db": "Data Source=SC-201610011543\\MYDB;Initial Catalog=Sys_Base_Db;User ID=sa;Password=Jianglei105;MultipleActiveResultSets=True;"
+    "Sys_Db": "Data Source=DESKTOP-4UNR39U\\SQLEXPRESS;Initial Catalog=Sys_Base_Db;User ID=sa;Password=123456abcD;MultipleActiveResultSets=True;"
   },
   /* 认证配置项*/
   "Jwt": {
